Name:                acn
Version:             0.1.2
Synopsis:            Abstract Crypto Notation
Description:         Abstract Crypto Notation
License:             AllRightsReserved
Copyright:           AlephCloud
Author:              Vincent Hanquez
Category:            Prototype
Stability:           experimental
Build-Type:          Simple
Homepage:            http://alephcloud.com/
Cabal-Version:       >=1.8

Library
  Exposed-modules:   Data.ACN
                   , Data.ACN.Debug
                   , Data.ACN.Types
                   , Data.ACN.Event
                   , Data.ACN.Marshall
                   , AlephCloud.ACN
                   , AlephCloud.ACN.Debug
                   , AlephCloud.ACN.Types
                   , AlephCloud.ACN.Event
                   , AlephCloud.ACN.Marshall
  Other-modules:     Data.ACN.Event.Types
                   , Data.ACN.Event.Parse
                   , Data.ACN.Event.Encode
                   , Data.ACN.LEB128
  Hs-Source-Dirs:    .
  Build-depends:     base >= 4 && < 5
                   , array
                   , mtl
                   , containers
                   , bytestring
                   , binary >= 0.7
                   , utf8-string
  ghc-options:       -Wall

Test-Suite test-acn
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  Main-is:           Tests.hs
  Build-Depends:     base >= 3 && < 5
                   , bytestring
                   , mtl
                   , tasty
                   , tasty-quickcheck
                   , tasty-hunit
                   , acn
  ghc-options:       -Wall -fno-warn-orphans -fno-warn-missing-signatures
